manifiestos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge-flask
  namespace: devops
spec:
  replicas: 3
  selector:
    matchLabels:
      app: challenge-flask-app
  template:
    metadata:
      labels:
        app: challenge-flask-app
    spec:
      containers:
        - name: challenge-flask-app
          image: natalita82/flask-challenge-app:1.0
          ports:
            - name: app-port
              containerPort: 8000
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 200m
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              port: app-port
              path: /
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              port: app-port
              path: /
