manifiestos/deploymentConsumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge-flask-consumer
  namespace: devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: challenge-flask-consumer
  template:
    metadata:
      labels:
        app: challenge-flask-consumer
    spec:
      containers:
        - name: challenge-flask-consumer
          image: natalita82/flask-challenge-consumer:1.0
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 200m
          readinessProbe:
            initialDelaySeconds: 10
            exec:
              command:
                - /bin/sh
                - -c
                - echo hola mundo
          livenessProbe:
            initialDelaySeconds: 10
            exec:
              command:
                - /bin/sh
                - -c
                -  echo hola mundo
