manifiestos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: challenge-flask-app
  namespace: devops
type: NodePort
spec:
  selector:
    app: challenge-flask-app
  ports:
    - name: http
      port: 8000
