manifiestos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: challenge-flask-app
  namespace: devops
spec:
  ingressClassName: challenge-flask-app
  rules:
  - host: service-flask-app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-app
            port:
              number: 8000
